# wealth-management-agent

./: .dockerignore  .env.example  Dockerfile  README.md  find_model.py  index.py  pyproject.toml  wealth_server.py
data/: data_collection.py  index.sh  test_data_source.py
mcp/: crm_server.py  fund_server.py
utils/: common.py
